<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/MenuText"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/editText"
        android:autofillHints="Edit text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100sp"
        android:ems="10"
        android:hint="@string/LabelLoad"
        android:inputType="textMultiLine"
        android:padding="15sp"
        android:text="@string/SelectText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".7"
            android:text="@string/ConstraintLayout"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:onClick="loadConstraintLayout"
            android:text="@string/ButtonLoadCons" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".7"
            android:text="@string/TableLayout"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:onClick="loadTableLayout"
            android:text="@string/ButtonLoadTable" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="75sp"
        android:layout_marginRight="15sp" />

</LinearLayout>